// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channel Card renders 1`] = `
<CardDecorator
  avatar="foo"
  cover="bar"
  link={true}
  placeholder={false}
  to="/c/foo"
>
  <div
    className="card-body"
  >
    <h5
      className="card-title text-truncate"
      title="baz"
    >
      baz
    </h5>
    <button
      className="btn btn-primary btn-block btn-sm font-weight-bold mt-4 mb-2"
    >
      SEGUIR
    </button>
    <p
      className="text-muted small mb-0"
    >
      Siguiendo este canal podrás ver sus publicaciones en tu página de inicio
    </p>
  </div>
</CardDecorator>
`;

exports[`Channel Card renders placeholder 1`] = `
<CardDecorator
  link={true}
  placeholder={true}
  to="/c/undefined"
>
  <div
    className="card-body"
  >
    <h5
      className="card-title text-truncate"
    />
    <button
      className="btn btn-primary btn-block btn-sm font-weight-bold mt-4 mb-2"
    >
      SEGUIR
    </button>
    <p
      className="text-muted small mb-0"
    >
      Siguiendo este canal podrás ver sus publicaciones en tu página de inicio
    </p>
  </div>
</CardDecorator>
`;
